implemented "TWEET_LIMIT" setting - limit system to x # of tweets

--- a/config.php.sample
+++ b/config.php.sample
@@ -20,6 +20,7 @@ define('SYNDICATE_PROTECTED', 1);    // Do not display protected feeds
 define('CACHE_ENABLED', 1);          // Cache Twitster results
 define('CACHE_TIME',60 * 5);         // Second # is cache time in minutes
 define('PAGE_LIMIT',20);             // Tweets per page
+define('TWEET_LIMIT',0);             // Max # of Tweets in system
 define('DEBUG',0);                   // Debug mode
 define('QUERY_LIMIT',139);           // Twitter API query limit (200 max)
 define('LOG_FILE','twitster.log');   // Logfile for debugging
